<resources>
    <string name="app_name">Pembelajaran Kimia</string>
    <string name="freshchat_file_provider_authority">com.example.demoapp.provider</string>
    <string name="label_faq">Your users can view all frequently asked questions before reaching out to you</string>
    <string name="label_btn_faq">FAQs</string>
    <string name="label_conversations">Your users can message you in real time</string>
    <string name="label_btn_conversations">Conversations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_logout">Logout</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="webview_loading">Load Content... </string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="haji">jenis</string>
    <string name="long_lorem_ipsum">
        Kita telah tahu bahwa larutan garam ada yang
        bersifat asam, bersifat basa, dan bersifat netral.
        sifat larutan garam dapat dijelaskan dengan konsep
        hidrolisis. Hidrolisis merupakan istilah umum yang digunakan
        untuk reaksi zat dengan air ( hidrolisis berasal dari kata hydro
        yang berarti air dan lysis yang berarti penguraian). Menurut
        konsep ini, komponen garam (kation dan anion) yang berasal
        dari asam lemah atau basa lemahbereaksi dengan air
        (terhidrolisis). Hidrolisis kation menghasilkan ion H3O+ (H+)
        sehingga dengan hidrolisis anion menghasilkan ion OH-
    </string>
    <string name="long_lorem_ipsum_2">
        B. GARAM DARI BASA KUAT DAN ASAM LEMAH \n
            garam yang berasal dari basa kuat dan
            asam lemah bila dilarutkan dalam air menghasilkan
            larutan yang bersifat basa. Contoh:
        \n<b>CH<sub>3</sub>COONa<sub>(aq)</sub> →CH<sub>3</sub>COO-<sub>(aq)</sub>+ Na+<sub>(aq)</sub></b>
        \nIon CH<sub>3</sub>COO- bereaksi dengan air membentuk
            reaksi kesetimbangan:
            CH3COONa(aq) + H2O(l) ⇄ CH3COOH(aq) + OH-
            (aq)
            Adanya ion OH- yang dihasilkan maka larutan
            bersifat basa. Hidrolisis ini tergolong hidrolisis
            sebagian sebabhanya sebgaian ion (ion CH3COO-
            )
            yang mengalami reaksi hidrolisis.
    </string>
    <string name="formulary_first_question">First question</string>
    <string name="formulary_first_question_first_answer_title">A. Garam yang tersusun dari asam \nkuat dan basa lemah.</string>
    <string name="formulary_first_question_second_answer_title">Title B</string>
    <string name="formulary_first_question_second_answer_description">Description B</string>
    <string name="formulary_first_question_third_answer_title">Title C</string>
    <string name="formulary_first_question_third_answer_description">Description C</string>
    <string name="formulary_first_question_fourth_answer_title">Title D</string>
    <string name="formulary_first_question_fourth_answer_description">Description D</string>
    <string name="formulary_second_question">Second question</string>
    <string name="formulary_second_question_first_answer_title">Title A</string>
    <string name="formulary_second_question_second_answer_title">Title B</string>
    <string name="mapper_first_question_first_answer">First question - Button A</string>
    <string name="mapper_first_question_second_answer">First question - Button B</string>
    <string name="mapper_first_question_third_answer">First question - Button C</string>
    <string name="mapper_first_question_fourth_answer">First question - Button D</string>
    <string name="mapper_second_question_first_answer">Second question - Button A</string>
    <string name="mapper_second_question_second_answer">Second question - Button B</string>
    <string name="mapper_default_value">Is not possible to mapper this value</string>
    <string name="very_long_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
        \n\nIn sit amet rutrum diam. Vivamus laoreet aliquam ipsum eget pretium. Mauris sagittis non elit quis fermentum. Aenean at diam nec tortor maximus rutrum. Sed nec nulla volutpat quam suscipit varius non at erat. Pellentesque non euismod diam, nec dapibus quam. Aliquam et posuere massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam eu nibh sed diam posuere tincidunt et non felis. Aliquam sodales facilisis tortor, at maximus ante varius quis.
        \n\nSuspendisse ornare est ac auctor pulvinar. Nam in venenatis risus. In facilisis tristique mollis. Curabitur tempus ipsum eget ipsum pharetra ornare. Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim est blandit sollicitudin non ut felis. Mauris nec mattis lacus. Cras consequat sapien a nisl faucibus, id consequat velit aliquet. Donec tincidunt quam elit, et scelerisque ipsum aliquet ac. Suspendisse lectus enim, auctor non justo et, vehicula consectetur nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fermentum ipsum vitae ligula interdum vulputate. Aenean bibendum molestie pharetra. Praesent aliquam, sapien ac rutrum rhoncus, enim mauris lacinia ligula, vitae fermentum purus lacus nec ex. Donec vel dolor pulvinar, dignissim nunc id, tempus risus.
        \n\nPhasellus blandit, leo ut semper vulputate, dui est fringilla purus, eu ullamcorper leo quam ut odio. Nunc tincidunt est eros, a dapibus massa hendrerit in. Aenean pellentesque ante eu justo pulvinar, eget sodales diam auctor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vulputate nunc ut lorem viverra, ac condimentum sem vehicula. Etiam in dui quam. Aenean tincidunt porttitor dignissim. Aenean id est erat. Praesent tempus est ullamcorper tincidunt ultricies. Mauris ac velit lorem. Maecenas quis dui vel neque aliquet mattis aliquet et ante.
        \n\nVivamus porttitor, erat at aliquam mollis, risus ligula suscipit metus, id semper nisi dui lacinia leo. Praesent at feugiat sem. Vivamus consectetur arcu sit amet metus efficitur dapibus. Sed metus ligula, efficitur quis finibus nec, pellentesque nec nulla. Nunc nec magna iaculis turpis vehicula condimentum id lobortis lectus. Etiam tempus nisi arcu, in condimentum felis vestibulum vitae. Donec fermentum dolor consequat nulla dignissim, non tempus leo viverra. Aenean magna magna, ultricies ut rutrum et, malesuada non nibh. Nam ligula erat, elementum sit amet justo eget, venenatis hendrerit nibh. In ac ipsum nunc. Nullam purus dolor, rhoncus eu justo id, vulputate ultrices nunc. Nam et risus velit. Fusce aliquam blandit urna quis pulvinar. Donec luctus tincidunt ipsum eu condimentum. Etiam porttitor dui in pulvinar vulputate.
        \n\nQuisque augue diam, convallis nec mollis in, placerat nec elit. Aliquam non erat tristique, consequat tortor ultricies, sodales erat. Aliquam quis enim eu nulla facilisis sollicitudin eu mollis mauris. Donec ornare urna non libero volutpat tempus. Mauris elementum egestas ex, a laoreet urna. Ut a magna mattis, sodales massa a, blandit justo. Nunc placerat ante quis lacus dictum dictum vitae eu nisi. Fusce quis est sodales justo sollicitudin mollis. Suspendisse posuere, augue a ultricies lacinia, tortor tortor faucibus purus, pulvinar suscipit erat orci varius arcu. Phasellus id nisl vitae eros dignissim consectetur. Ut ac ex ac arcu vestibulum sagittis sit amet a massa.
        \n\nSuspendisse elit libero, placerat vel ipsum vitae, tristique faucibus nulla. Aliquam ac elit porttitor, vestibulum turpis nec, bibendum dui. Vivamus quam orci, consequat in scelerisque id, dignissim vel purus. Proin rhoncus ante eu nisi dictum lacinia. Proin congue tempor nunc, eu semper elit tincidunt ut. Duis vehicula purus at lorem sollicitudin porttitor. Nulla facilisi. Donec non dapibus neque. Donec neque massa, sodales vitae eros nec, lacinia vestibulum neque. Nullam venenatis vitae tortor sed fermentum. Aenean massa enim, placerat eu ligula quis, tincidunt rutrum purus. Ut tincidunt egestas varius.
    </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="about_text">Developer Oleh Sistem Informasi Uin Suska Riau</string>
    <string name="menganalisis_garam">Menganalisis keseimbangan ion dalam larutan garam dan menghubungkan pH nya</string>
    <string name="kompetensi_dasar">Kompetensi\nDasar</string>
    <string name="indikator">Indikator</string>
    <string name="NaOCL">NaOCL</string>
    <string name="na">Na<sup>+</sup></string>
    <string name="ocl">OCL<sup>-</sup></string>
    <string name="na_ocl">Na<sup>+</sup>dan OCL<sup>-</sup></string>
    <string name="answer_a_08">2 x 10<sup>-4</sup></string>
    <string name="answer_b_08">2 x 10<sup>-5</sup></string>
    <string name="answer_c_08">4 x 10<sup>-4</sup></string>
    <string name="answer_d_08">4 x 10<sup>-5</sup></string>
</resources>