<?xml version="1.0" encoding="utf-8"?>
<com.example.appskimia.ui.CustomRadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/first_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:text="8."
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="Larutan NH4Cl 0,4 M mengalami tetapan hidrolisis sebesar 10-9 konsentrasi H+ dalam larutan tersebut adalah...?"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_a"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="53dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/answer_a_08"
        app:layout_constraintTop_toBottomOf="@+id/first_question"
        app:title_rb_two_fields="A." >

    </com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton>

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_b"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/answer_b_08"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_a"
        app:title_rb_two_fields="B." />

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_c"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/answer_c_08"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_b"
        app:title_rb_two_fields="C." />

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_d"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="53dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/answer_d_08"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_c"
        app:title_rb_two_fields="D." />


</com.example.appskimia.ui.CustomRadioGroup>