<?xml version="1.0" encoding="utf-8"?>
<com.example.appskimia.ui.CustomRadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/first_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:text="9."
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="Dalam kehidupan sehari hari banyak kita jumpai ibu-ibu rumah tangga mengeluh tentang pakaian putih sekolah anaknya dimana terdapat noda membandel dipakaian mereka. Untuk mengatasi masalah ini salah satu caranya ialah menggunakan bayclin atau sunklin untuk memutihkan pakaian. Produk ini mengandung 5% NaOCL yang sangat reaktif sehingga dapat menghancurkankan pewarna dan pakaian menjadi putih kembali. Garam ini terbentuk dari asam lemah HOCL dan NaOH (basa kuat) \n
Reaksinya: NaOCL → Na+ 	+	OCL- \n
Dari reaksi tersebut manakah yang akan mengalami hidrolisis…
"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_a"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="53dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/NaOCL"
        app:layout_constraintTop_toBottomOf="@+id/first_question"
        app:title_rb_two_fields="A." >

    </com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton>

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_b"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/na"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_a"
        app:title_rb_two_fields="B." />

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_c"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/ocl"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_b"
        app:title_rb_two_fields="C." />

    <com.example.appskimia.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/rb_jawaban_d"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="53dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/na_ocl"
        app:layout_constraintTop_toBottomOf="@+id/rb_jawaban_c"
        app:title_rb_two_fields="D." />


</com.example.appskimia.ui.CustomRadioGroup>