<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/spacing_medium">

        <TableRow android:layout_marginTop="@dimen/spacing_medium">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kompetensi_dasar"
                android:textColor="#000000"
                android:layout_marginLeft="@dimen/spacing_medium"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="3.11"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menganalisis_garam"
                    android:textColor="#000000"
                    android:layout_weight="1"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/indikator"
                android:textColor="#000000"
                android:layout_marginLeft="@dimen/spacing_medium"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="4.5."
                    android:src="@drawable/ic_games_black_24dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Menentukan sifat larutan garam yang terhidrolisis"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dip" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="@dimen/spacing_medium"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="4.5."
                    android:src="@drawable/ic_games_black_24dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Menghitung ph larutan garam yang terhirolisis"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dip" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.appcompat.widget.LinearLayoutCompat>



